# cp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bun.lockb  debug.h  package.json  pretest.sh  test.txt  utils.h  vitest.workspace.ts
codeforces/: CMakeLists.txt
codeforces/2091/: CMakeLists.txt
codeforces/2091/a/: main.cc
codeforces/2091/b/: main.cc
codeforces/2091/c/: main.cc
codeforces/2091/d/: main.cc
codeforces/2091/e/: main.cc
codeforces/2091/f/: input  main.cc  output
codeforces/2091/g/: alt.cc  alt2.cc  alt3.cc  input  main.cc  output
contest/: CMakeLists.txt
contest/1984/: CMakeLists.txt
contest/1984/a/: main.cc
contest/1984/b/: main.cc
contest/1984/c1/: main.cc
contest/1984/c2/: main.cc
contest/1984/d/: input  main.cc  output
contest/1984/e/: main.cc  output
contest/1984/f/: main.cc
contest/1984/g/: input  main.cc  output
contest/1984/h/: input  main.cc  output
contest/1985/: CMakeLists.txt
contest/1985/a/: main.cc
contest/1985/b/: main.cc
contest/1985/c/: main.cc
contest/1985/d/: main.cc
contest/1985/e/: main.cc
contest/1985/f/: main.cc
contest/1985/g/: main.cc
contest/1985/h1/: main.cc
contest/1985/h2/: main.cc  main2.cc
cses/: CMakeLists.txt
mycontest/: CMakeLists.txt  problemset.md
playground/: CMakeLists.txt  problemset.md
polygon/: CMakeLists.txt  olymp.sty  problemset.md  problemset.yaml
rounds/: CMakeLists.txt  utils.h  utils.ts
rounds/1984/: CMakeLists.txt
rounds/1984/magnitude_easy/: main.cc
rounds/1984/magnitude_hard/: main.cc
(+824 files in other folders)
