add_executable(1984_a a/main.cc)
add_executable(1984_b b/main.cc)
add_executable(1984_c1 c1/main.cc)
add_executable(1984_c2 c2/main.cc)
add_executable(1984_d d/main.cc)
add_executable(1984_e e/main.cc)
add_executable(1984_f f/main.cc)
add_executable(1984_g g/main.cc)
add_executable(1984_h h/main.cc)