add_executable(1985_a a/main.cc)
add_executable(1985_b b/main.cc)
add_executable(1985_c c/main.cc)
add_executable(1985_d d/main.cc)
add_executable(1985_e e/main.cc)
add_executable(1985_f f/main.cc)
add_executable(1985_g g/main.cc)
add_executable(1985_h1 h1/main.cc)
add_executable(1985_h2 h2/main.cc)